Fix button alignment issue

--- a/wp-content/themes/pub/wporg-learn-2024/src/style/_jetpack.scss
+++ b/wp-content/themes/pub/wporg-learn-2024/src/style/_jetpack.scss
@@ -8,6 +8,10 @@
 	font-weight: 600;
 }
 
+.wp-block-jetpack-contact-form .wp-block-button__link {
+	height: auto;
+}
+
 .wp-block-jetpack-contact-form-container .contact-form {
 	.grunion-checkbox-multiple-options legend,
 	.grunion-radio-options legend,
